Lecturas del 18-Septiembre-2025

--- a/README.org
+++ b/README.org
@@ -78,6 +78,31 @@ its content.
 
 ** Septiembre 2025
 
+*** 17-Sep-25
++ [[https://arxiv.org/abs/2509.13142][Formalizing dimensional analysis using the Lean theorem prover]]. ~ Maxwell P. Bobbin, Colin Jones, John Velkey, Tyler R. Josephson. #ITP #LeanProver
++ [[https://www.galois.com/articles/claude-can-sometimes-prove-it][Claude can (sometimes) prove it]]. ~ Mike Dodds. #ITP #LeanProver #Math #AI #LLMs #Claude
++ [[https://arxiv.org/abs/2509.10828][Structuring definitions in mathematical libraries]]. ~ Alena Gusakov, Peter Nelson, Stephen Watt. #ITP #LeanProver #Math
++ [[https://florisvandoorn.com/carleson/blueprint/][A blueprint for the formalization of Carleson’s theorem on convergence of Fourier series]]. ~ Lars Becker et als. #ITP #LeanProver #Math
++ [[https://florisvandoorn.com/theses/JohannesFolttmann.pdf][Formalization of the internal language of a topos]]. ~ Johannes Folttmann. #ITP #LeanProver #Math
++ [[https://recognitionphysics.org/meta-principle.html][The meta-principle: A tautological foundation for physics]]. ~ Jonathan Washburn. #ITP #LeanProver #Physics
++ [[https://cgi.cse.unsw.edu.au/~eptcs/paper.cgi?FROM2025.4.pdf][Łukasiewicz logic with actions for neural networks training]]. ~ Ioana Leuştean, Bogdan Macovei. #ITP #LeanProver
++ [[https://www.renaissancephilanthropy.org/towards-automated-mathematical-discovery][Towards automated mathematical discovery]]. ~ Aaron Courville, Navin Goyal. #AI #Math #LLMs #ITP #LeanProver
++ [[https://www.renaissancephilanthropy.org/sketchpad-a-high-precision-and-easy-to-use-system-for-automatic-formal-sketch-generation][Sketchpad: A high-precision and easy-to-use system for automatic formal sketch generation]]. ~ Wenda Li, Luo Mai, Larry Paulson, Huajian Xin. #AI #Math #ITP #IsabelleHOL #LeanProver
++ [[https://www.renaissancephilanthropy.org/scalable-theorem-proving][Scalable theorem proving via mathematical databases]]. ~ Christopher Birkbeck, David Roe, Andrew Sutherland. #AI #Math #ITP #LeanProver
++ [[https://www.renaissancephilanthropy.org/learning-to-do-math-with-vampires-and-spiders][Learning to do math with vampires and spiders]]. ~ Andrei Voronkov, Michael Rawson. #ITP #LeanProver #Rocq
++ [[https://www.renaissancephilanthropy.org/gnn-smt-consortium-based-proof-automation-for-lean-4][GNN-SMT: A consortium based proof automation for Lean 4]]. ~ Clark Barrett, Leni Aniva, Abdalrhman Mohamed, Harun Khan. #ITP #LeanProver #SMT
++ [[https://www.renaissancephilanthropy.org/game-over-or-qed][Game over or QED? (For taking the Lean Game Server to the next level)]]. ~ Marcus Zibrowius. #ITP #LeanProver
++ [[https://www.renaissancephilanthropy.org/domain-specific-documentation-for-mathlib-1][Domain specific (Documentation for Mathlib)]]. ~ John Talbot, Richard M. Hill. #ITP #LeanProver #Mathlib
++ [[https://www.renaissancephilanthropy.org/document-level-autoformalization][Document-level autoformalization]]. ~ Antoine Bosselut, Viktor Kunčak, Maryna Viazovska. #AI #Math #ITP #LeanProver #Autoformalization
++ [[https://www.renaissancephilanthropy.org/databases-of-structured-motivated-proofs][Databases of structured motivated proofs]]. ~ Timothy Gowers, Anand Rao, Anshula Gandhi, Jacob Loader, Jovan Gerbscheid, Jonas Bayer. #AI #Math #ITP #LeanProver
++ [[https://www.renaissancephilanthropy.org/constraining-llms-for-theorem-proving-a-neurosymbolic-approach-to-guaranteed-autoformalization][Constraining LLMs for theorem proving (A neurosymbolic approach to guaranteed autoformalization)]]. ~ Eleonora Giunchiglia, Sam Adam-Day, Joshua Ong, Mihaela Cătălina Stoian, Luca Andolfi. #AI #Math #LLMs #ITP #LeanProver #Autoformalization
++ [[https://www.renaissancephilanthropy.org/bridging-proof-and-computation-a-verified-leanmacaulay2-interface][Bridging proof and computation (For a verified Lean–Macaulay2 interface)]]. ~ Matthew Ballard, Anton Leykin, Damiano Testa, Michael Stillman. #AI #Math #ITP #LeanProver #CAS #Macaulay2
++ [[https://www.renaissancephilanthropy.org/a-structured-representation-of-tactics-for-machine-assisted-theorem-proving][A structured representation of tactics for machine-assisted theorem proving]]. ~ Jade Master, Vincent Wang-Maścianica, Zanzi Mihejevs, Bruno Gavranović, Andre Videla, Dylan Braithwaite. #AI #Math #ITP #LeanProver
++ [[https://www.renaissancephilanthropy.org/a-dataset-of-modern-formalized-theorem-statements][A dataset of modern formalized theorem statements]]. ~ Kevin Buzzard. #ITP #LeanProver #Math
++ [[https://www.renaissancephilanthropy.org/an-ai-focused-tractic-for-languag-learning-1][An AI-focused tactic for language learning]]. ~ Robert Y. Lewis. #AI #Math #ITP #LeanProver
++ [[https://karczmarczuk.users.greyc.fr/TEACH/Semin/quastru.pdf][Quantum structures and functional programming]]. ~ Jerzy Karczmarczuk. #Haskell #FunctionalProgramming
++ [[https://homepages.inf.ed.ac.uk/wadler/papers/plinth/plinth.pdf][Plinth: A plugin-powered language built on Haskell (Experience report)]]. ~ Ziyang Liu, Kenneth MacKenzie, Roman Kireev, Michael Peyton Jones, Philip Wadler, Manuel Chakravarty. #Haskell #FunctionalProgramming
+
 *** 15-Sep-25
 + [[https://mmhaskell.com/blog/2025/9/15/topological-sort-managing-mutable-structures-in-haskell][Topological sort: Managing mutable structures in Haskell]]. ~ James Bowen. #Haskell #FunctionalProgramming #RustLang
 
