--- a/README.org
+++ b/README.org
@@ -79,6 +79,11 @@ its content.
 
 ** Octubre 2025
 
+*** 07-Oct-25
++ [[https://arxiv.org/abs/2501.10127][A formally verified IEEE 754 floating-point implementation of interval iteration for MDPs]]. ~ Bram Kohlen, Maximilian Schäffeler, Mohammad Abdulaziz, Arnd Hartmanns, Peter Lammich. #ITP #IsabelleHOL
++ [[https://marcosh.github.io/post/2025/10/07/the-mondrian-introduction-to-functional-optics.html][The Mondrian introduction to functional optics]]. ~ Marco Perone. #Haskell #FunctionalProgramming
++ [[https://funcall.blogspot.com/2025/09/using-llm-on-advent-of-code.html][Using an LLM on the Advent of Code]]. ~ Joe Marshall. #Advent_of_Code #AI_coding #CommonLisp #Gemini #LLM
+
 *** 06-Oct-25
 + [[https://youtu.be/TMM2QnX5BG8][An introduction to formal real analysis (Lecture 8: Advanced limit theorems and induction)]]. ~ Alex Kontorovich. #ITP #LeanProver #Math
 + [[https://www.cs.princeton.edu/~appel/papers/coo-csr.pdf][Formal verification of COO to CSR sparse matrix conversion]]. ~ Andrew W. Appel. #ITP #CoqProver #Math
