Lecturas del 10 de octubre de 2025

--- a/README.org
+++ b/README.org
@@ -84,6 +84,9 @@ its content.
 + [[https://mrcjkb.dev/posts/2025-10-08-haskell-for-renewables.html][Haskell is the perfect fit for renewable energy tech]]. ~ Marc Jakobi. #Haskell #FunctionalProgramming
 + [[https://youtu.be/oOYcPkBaotg][Mathematics: The rise of the machines]]. ~ Yang-Hui He. #AI #Math #LLMs #ITP #LeanProver
 
+*** 08-Oct-25
++ [[https://arxiv.org/abs/2508.21593][Growing Mathlib: Maintenance of a large scale mathematical library]]. ~ Anne Baanen, Matthew Robert Ballard, Johan Commelin, Bryan Gin-ge Chen, Michael Rothgang, Damiano Testa. #ITP #LeanProver #Mathlib #Math
+
 *** 07-Oct-25
 + [[https://arxiv.org/abs/2501.10127][A formally verified IEEE 754 floating-point implementation of interval iteration for MDPs]]. ~ Bram Kohlen, Maximilian Schäffeler, Mohammad Abdulaziz, Arnd Hartmanns, Peter Lammich. #ITP #IsabelleHOL
 + [[https://marcosh.github.io/post/2025/10/07/the-mondrian-introduction-to-functional-optics.html][The Mondrian introduction to functional optics]]. ~ Marco Perone. #Haskell #FunctionalProgramming
