--- a/README.org
+++ b/README.org
@@ -79,6 +79,10 @@ its content.
 
 ** Octubre 2025
 
+*** 11-Oct-25
++ [[https://youtu.be/oXTSs3GtkB0][An introduction to formal real analysis (Lecture 9: Finite sums and boundedness of convergent sequences)]]. ~ Alex Kontorovich. #ITP #LeanProver #Math
++ [[https://youtu.be/eX3Z8wzuINM][An introduction to formal real analysis (Lecture 10: Algebraic limit theorem and order properties)]]. ~ Alex Kontorovich. #ITP #LeanProver #Math
+
 *** 10-Oct-25
 + [[https://arxiv.org/abs/2510.04070v1][Markov kernels in Mathlib's probability library]]. ~ Rémy Degenne. #ITP #LeanProver #Maht
 + [[https://www.isa-afp.org/entries/Relational_Divisibility.html][Relational divisibility (in Isabelle/HOL)]]. ~ Walter Guttmann. #ITP #IsabelleHOL #Math
